# sourkode

./: CMakeLists.txt
inc/KD/: KHR_thread_storage.h  kdplatform.h
src/: CMakeLists.txt  entry_main.c  entry_winmain.c  errors_common.c  memalloc_stdlib.c  sk_thread_data.h  sourkode.pc.in  sourkodeConfig.cmake.in  thread_storage_no.c  threading_no.c
